# sovereign-temple

./: .gitignore  API_KEYS_NEEDED.md  BRANDING_GUIDELINES.md  BRIDGE_ARCHITECTURE.md  BRIDGE_INTEGRATION.md  CHINA_ECOSYSTEM_INTEGRATION.md  COMPREHENSIVE_STATUS.md  CONNECTION_GUIDE.md  DUAL_MAC_MESH.md  Dockerfile  FINAL_STATUS.md  FUNDING_STRATEGY.md  GENESIS_READY.md  GENESIS_STATUS.md  GPT4O_ENHANCEMENT_PLAN.md  HANDOFF.md  HARV_PHASE2_PLAN.md  I18N_ARCHITECTURE.md  INFRASTRUCTURE_ENHANCEMENTS.md  LICENSE  LIVING-TOPOLOGY.md  M2_DEPLOY_RUNBOOK.md  MASTER_UI_PLAN.md  MEOKCLAW_47_GENERALS_ARCHITECTURE.md  MEOKCLOUD_ARCHITECTURE.md  Modelfile.jarvis  Modelfile.jeeves  Modelfile.sophie  RAILWAY_DEPLOY.md  README.md  README_DUAL_BRAIN_v2.md  SAMSUNG_SOUTH_KOREA_INTEGRATION.md  SECURITY_HARDENING.md  SOCIAL_AUTHORITY_BOOTSTRAP.md  SOVEREIGN_ARCHITECTURE_BLUEPRINT.md  STRATEGIC_ASSESSMENT_2026.md  STRATEGIC_COMPETITIVE_ANALYSIS.md  SYSTEM_STATUS.md  TRANSLATION_GUIDE.md  VIRAL_ROADMAP.md  (+303 more)
.opencode/: opencode.json
a2a-agents/: agent-card.json
a2a-protocol/: __init__.py  agent_card.py  server.py
agents/: aqua_bridge.py
apple-intelligence/: APPLE_INTELLIGENCE_INTEGRATION.md  MEOKCLAWAPI.swift  MEOKCLAWApp.swift  MEOKCLAWIntents.swift  MEOKCLAWLiveActivity.swift  MEOKCLAWScreenContext.swift
archive/: genesis_pipeline_fixed.py
attestation/: __init__.py  keys.py  router.py  schemas.py  signer.py  sigstore_client.py  verifier.py
backend/: alipay_bridge.py  baidu_bridge.py  bytedance_bridge.py  wechat_bridge.py
chrome-extension/: background.js  content.js  manifest.json  popup.html  popup.js  sidepanel.html
config/: constitutional_core.json  constitutional_scholar_guide.md  generals.yaml  init.sql
consciousness/: emotional_state.py
creativity_engine/: __init__.py  civilizational_corpus.py  corpus_ingester.py  creativity_nn.py  cross_domain_linker.py  kimi_agent.py  novelty_metric.py  quality_diversity.py  stochastic_resonance.py  training_pipeline.py
dashboard/: index.html
data/: .gitignore  (+34 more)
desktop-tauri/: Cargo.toml  package.json
desktop-tauri/src-tauri/: tauri.conf.json
desktop-tauri/src-tauri/src/: main.rs
mcp-servers/meokclaw-dualbrain/: README.md  main.py  pyproject.toml  server.py
(+944 files in other folders)
