[package]
name = "meokclaw-desktop"
version = "2.4.0"
description = "MEOKCLAW Sovereign Intelligence — Desktop"
authors = ["CSOAI ORG"]
license = "MIT"
repository = "https://github.com/CSOAI-ORG/sovereign-temple"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "updater"] }
tauri-plugin-localhost = "0.1"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
